compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_parameter_name3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1231
expression: "let add = fn(numA: Int, num_b: Int) { numA + num_b }"
---
----- SOURCE CODE
let add = fn(numA: Int, num_b: Int) { numA + num_b }

----- ERROR
error: Invalid argument name
  ┌─ /src/one/two.rakun:1:14
  │
1 │ let add = fn(numA: Int, num_b: Int) { numA + num_b }
  │              ^^^^ This is not a valid argument name

Hint: Argument names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: num_a
